2006-05-02 Ian Rutt
 * Added temperature half-range to glint output variables as glint_arng

2006-04-27 Ian Rutt
 * Final version of EISMINT3 Greenland scenario. Can choose to start from
 present-day ice sheet or from no ice.
 * Added new calving scheme (marine ice edge/threshold based) and tidied
 up calving code (removed strange unknown option which was left over from
 old model)
	
2006-04-25 Ian Rutt
 * Removed redundant GLIDE options (sliding_law and stress_calc)

2006-04-20 Magnus Hagdorn
 * configure.in: when looking for Sun compiler also grep for Forte

2006-04-20 Ian Rutt
 * Added driver for EISMINT3 Greenland scenario, based on Magi's EISMINT
 1 & 2 drivers.
 * Added option to specify topography as being in isostatic equilibrium
 and thus calculate relaxed topography on the fly.

2006-02-22 Ian Rutt
 * Corrected CF mapping compliance in glimmer_CFproj.f90; this time,
 changed LAEA projection.

2006-02-09 Ian Rutt
 * Rewrote parts of glint_initialise to allow the specification of an
   array of parameter files for individual instances in the API, as an
   alternative to a top-level parameter file that points to the
   instances. This is so that we can also supply an array of config file
   types to overwrite parameters read from files, but need to be sure of
   the ordering when doing so. 
 * Added a non-pointer wrapper type to glimmer_config, to allow the
   creation of arrays of config data types. These can now be passed to
   glint_initialise using array constructors or whatever method you like,
   and will overwrite the data loaded from file
 * Also added some overloaded subroutines to allow access to and
   combination of these types
 * For the purposes of identifying config sections where there may be more
   than one instance in a given file, the value of the key 'tag' is now
   significant. If one is setting a value in a config file, a tag may now
   be specified, and if a section with that tag is found, the value is set